express route working

--- a/public/index.html
+++ b/public/index.html
@@ -9,18 +9,101 @@
     <!-- Bootstrap v4 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="css/style.css">
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Jura" rel="stylesheet"> <!-- font-family: 'Jura', sans-serif; -->
+    <!-- Font Awesome cdn -->
+    <script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 </head>
 
 <body>
 
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">DM</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+            aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home
+                        <span class="sr-only">(current)</span>
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#portfolio">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
 
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    <div class="container-fluid">
+        <div class="header-section">
+            <div class="header-text">
+                <h1>Full Stack Web Developer With a Passion For Making Beautiful Websites</h1>
+                <div class="down-arrow">
+                    <button type="button" class="btn btn-primary arrow-btn">
+                        <i class="far fa-arrow-alt-circle-down arrow"></button></i>
+                    </button>
+                </div>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-sm-12 portfolio-header">
+                <h2 style="text-align: center">Portfolio</h2>
+            </div>
+        </div>
+
+    <div class="row" class="portfolio-section" id="portfolio-section">
+        <div class="col-sm-6">
+            <div class="project1">
+                <img src="./images/trytech2.jpg" alt="" class="trytech-img">
+                <div class="middle">
+                    <a href="https://radiant-springs-71732.herokuapp.com/" class="project1-text">Visit Site</a>
+                    <a href="https://github.com/dmoss215/trytech" class="project1-text">GitHub</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <p>Class Project</p>
+            <p>Technologies Used:</p>
+            <img src="./images/nodejs.jpg" alt="">
+            <img src="./images/jslogo.png" alt="">
+        </div>
+    </div>
+
+        <div class="row about-section">
+            <div class="col-sm-4">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quisquam quo culpa incidunt, eveniet aliquid unde quos,
+                veritatis dolore consequatur rem! Rem repellendus officia enim voluptatibus, esse optio quia distinctio?
+            </div>
+            <div class="col-sm-4">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quisquam quo culpa incidunt, eveniet aliquid unde quos,
+                veritatis dolore consequatur rem! Rem repellendus officia enim voluptatibus, esse optio quia distinctio?
+            </div>
+            <div class="col-sm-4">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nostrum quisquam quo culpa incidunt, eveniet aliquid unde quos,
+                veritatis dolore consequatur rem! Rem repellendus officia enim voluptatibus, esse optio quia distinctio?
+            </div>
+        </div>
+    </div>
+
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+    <script src="./js/app.js"></script>
 </body>
 
 </html>
