--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
     <div class="container-fluid">
         <div class="header-section">
             <div class="header-text">
-                <h1>Full Stack Web Developer With a Passion For Making Beautiful Websites</h1>
+                <h1 class="main-header-text">Full Stack Web Developer With a Passion For Making Beautiful Websites</h1>
                 <div class="down-arrow">
                     <button type="button" class="btn btn-primary arrow-btn">
                         <i class="far fa-arrow-alt-circle-down arrow"></button></i>
